// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tablink renders 1`] = `
<a
  className="sc-czuydh hzBAwk"
/>
`;

exports[`Tablink renders Href 1`] = `
<a
  className="sc-czuydh hzBAwk"
  href="www.google.com"
/>
`;

exports[`Tablink renders count 1`] = `
<a
  className="sc-czuydh hzBAwk"
>
  <span
    className="sc-dRaBNj evgJvx"
  >
    2
  </span>
</a>
`;

exports[`Tablink renders element left 1`] = `
<a
  className="sc-czuydh hzBAwk"
>
  <div
    className="sc-gNvmti fyEYuQ"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`Tablink renders isTop 1`] = `
<a
  className="sc-czuydh eGHBDL"
/>
`;

exports[`Tablink renders size 1`] = `
<a
  className="sc-czuydh fSxGnb"
  size="small"
/>
`;
